--- a/WebAppProject/src/main/webapp/WEB-INF/web.xml
+++ b/WebAppProject/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,32 @@
 	<url-pattern>/showdate</url-pattern>
 </servlet-mapping>
 
+<servlet>
+	<servlet-name>login</servlet-name>
+	<servlet-class>com.test.servlet.LoginServlet</servlet-class>
+</servlet>
+
+<servlet-mapping>
+	<servlet-name>login</servlet-name>
+	<url-pattern>/validateAndLogin</url-pattern>
+</servlet-mapping>
+
+<!-- Spring Servlet -->
+	<servlet>
+        <servlet-name>springservlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+         <init-param>
+        	<param-name>contextConfigLocation</param-name>
+        	<param-value>classpath*:applicationContext.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    
+     <servlet-mapping>
+        <servlet-name>springservlet</servlet-name>
+        <url-pattern>/mvc/*</url-pattern>  <!-- http://localhost:8080/springweb/mvc/addStudent -->
+    </servlet-mapping>
+
 <welcome-file-list>
 	<welcome-file>data/welcome.html</welcome-file>
 </welcome-file-list>
